welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:3: error: not found: value isFacingTrail
 	if (isFacingTrail()==true){
            ^