welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
 def hunt (c:Color){
 	if (isFacingTrail()==true){
 	avance()	
 	         }

 }